<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hsr.qfs.view.AuthRegisterFragment"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstname"
        android:layout_weight="0"
        android:hint="Vorname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLastname"
        android:layout_weight="0"
        android:hint="Nachname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmail"
        android:layout_weight="0"
        android:hint="Email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:layout_weight="0"
        android:hint="Benutzername" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_weight="0"
        android:hint="Passwort" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPasswordRepeat"
        android:layout_weight="0"
        android:hint="Passwort wiederholen" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrieren"
        android:id="@+id/btnRegister"
        android:layout_weight="0"
        android:layout_gravity="right" />

</LinearLayout>
