<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:title="Anmelden" />
        <item
            android:id="@+id/nav_register"
            android:title="Registrieren" />

        <item
            android:id="@+id/nav_home"
            android:title="Quiz Übersicht" />
        <item
            android:id="@+id/nav_category"
            android:title="Category" />
        <item
            android:id="@+id/nav_statistic"
            android:title="Statistik" />
        <item
            android:id="@+id/nav_question"
            android:title="Question" />
        <item
            android:id="@+id/nav_logout"
            android:title="Abmelden" />
    </group>
</menu>